[package]
edition = "2018"
license = "Apache 2.0"
name = "ternoa-nfts"
version = "0.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.2.0" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
serde = { optional = true, version = "1.0.126" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
log = { default-features = false, version = "0.4.14"}
ternoa-common = { default-features = false, path = "../../common" }
ternoa-primitives = { default-features = false, path = "../../primitives" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "ternoa-common/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
]