[package]
name = "ternoa-primitives-ext"
version = "0.1.0"
edition = "2018"
license = "Apache 2.0"

[dependencies]

# Substrate
sp-runtime-interface = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-02-03", default-features = false }

[features]
default = [ "std" ]
std = [
	"sp-runtime-interface/std",
]