[package]
name = "ternoa-primitives-ternoa"
version = "0.1.0"
edition = "2018"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Frame
frame-system = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-02-03", default-features = false }

# Sp
sp-application-crypto = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-02-03", default-features = false }
sp-core = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-02-03", default-features = false }
sp-runtime = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-02-03", default-features = false }
sp-std = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-02-03", default-features = false }

# Rest
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.3.1" }
serde = { optional = true, version = "1.0.132" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"serde",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
    "sp-std/std",
	"scale-info/std",
]
