[package]
name = "mainnet-runtime-constants"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
smallvec = "1.8.0"

frame-support = { workspace = true, default-features = false }
ternoa-core-primitives = { path = "../../../core-primitives",  default-features = false }
ternoa-runtime-common = { package = "ternoa-runtime-common", path = "../../common", default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std"
]

